# csv2parquet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
src/csv2parquet/: __init__.py  cli.py  io.py  logging_conf.py  transform.py
tests/: test_cli.py  test_cli_local.py  test_io.py  test_transform.py
