[tool.poetry]
name = "csv2parquet"
version = "0.1.0"
description = "CSV to partitioned Parquet on S3/local with schema enforcement, idempotency, and JSON logs."
authors = ["Poise Dre"]
readme = "README.md"
packages = [{ include = "csv2parquet", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
s3fs = "^2024.6.0"
pydantic = "^2.7.4"
duckdb = "^1.0.0"
python-json-logger = "^2.0.7"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
ruff = "^0.6.2"
black = "^24.8.0"
pre-commit = "^3.8.0"
moto = "^5.0.11"

[tool.poetry.scripts]
csv2parquet = "csv2parquet.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","N","UP","B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
